--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,8 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = 
 	beegee-tokyo/DHT sensor library for ESPx@^1.19
+	;prampec/IotWebConf@^3.2.1
+	lorol/LittleFS_esp32@^1.0.6
